test/end-to-end/compile-errors/circular-import-b.crow
import
	./circular-import-a

b int()
	0
